video.js updations

--- a/video.html
+++ b/video.html
@@ -37,13 +37,13 @@
             <div id="videoName">Pubg international</div>
             <div class="h1c">
                 <div class="h1cl">
-                    <h2>Views</h2>
-                    <h2>Time</h2></div>
+                    <h2 id="noOfViews">Views</h2>
+                    <h2 id="timeOfUpload">Time</h2></div>
                 <div class="h1cr">
                     <button><img src="./images/Liked.svg" alt="" /><i id="likeCount">Like</i></button>
-                    <button><img src="./images/DisLiked.svg" alt="" /><i id="likeCount">Unlike</i></button>
-                    <button><img src="./images/Share.svg" alt="" /><i id="likeCount">Share</i></button>
-                    <button><img src="./images/Save.svg" alt="" /><i id="likeCount">Save</i></button>
+                    <button><img src="./images/DisLiked.svg" alt="" /><i id="dislikeCount">Unlike</i></button>
+                    <button><img src="./images/Share.svg" alt="" /><i >Share</i></button>
+                    <button><img src="./images/Save.svg" alt="" /><i>Save</i></button>
                     <button><img src="./images/More.svg" alt="" /></button>
                   </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="h1c2l">
                    <div> <img src="./images/sub-photo.svg" alt="" />
                     <div>
-                      <h1>Channel NAME</h1>
+                      <h1 id="channelName">Channel NAME</h1>
                       <p>NO OF SUBSCRIPBER</p>
                     </div>
                     </div>
