--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="./images/header-button (1).svg" alt="">
         <img src="./images/header-button (2).svg" alt="">
         <img src="./images/header-button (3).svg" alt="">
-        <img src="./images/header-button.svg" alt="">
+        <img src="./images/User-Avatar.svg" alt="">
 
     </div>
 </nav>
@@ -53,7 +53,37 @@
             </ul>
         </div>
         <div class="dummyHero">
-            <div class="left-hero"></div>
+            <div class="left-hero">
+
+                <div class="lh1">
+                    <div><img src="./images/Icon.svg" alt=""><h1>Home</h1></div>
+                    <div><img src="./images/newicons/14.svg" alt=""><h1>Explore</h1></div>
+                    <div><img src="./images/newicons/15.svg" alt=""><h1>Subscription</h1></div>
+                </div>
+                <br>
+                <div class="lh2">
+                    <div><img src="./images/newicons/2.svg" alt=""><h1>Library</h1></div>
+                    <div><img src="./images/newicons/3.svg" alt=""><h1>History</h1></div>
+                    <div><img src="./images/newicons/14.svg" alt=""><h1>Your Video</h1></div>
+                    <div><img src="./images/newicons/5.svg" alt=""><h1>Watch Later</h1></div>
+                    <div><img src="./images/newicons/liked.svg" alt=""><h1>Liked Video</h1></div>
+                </div>
+                <br>
+                <div class="lh3">
+                    <h2 class="lh1h2">Susbcription</h2>
+                    <div><img src="./images/newicons/2.svg" alt=""><h1>Home</h1></div>
+                    <div><img src="./images/newicons/2.svg" alt=""><h1>Home</h1></div>
+                    <div><img src="./images/newicons/2.svg" alt=""><h1>Home</h1></div>
+                </div>
+                <br>
+                <div class="lh4">
+                    <h2 class="lh1h2">More From youtube</h2>
+                    <div><img src="./images/newicons/17.svg" alt=""><h1>Youtube Premium</h1></div>
+                    <div><img src="./images/newicons/17.svg" alt=""><h1>Gaming</h1></div>
+                    <div><img src="./images/newicons/17.svg" alt=""><h1>Live</h1></div>
+                </div>
+
+            </div>
             
             
             <div class="hero">
