--- a/video.html
+++ b/video.html
@@ -27,7 +27,7 @@
         <img src="./images/header-button (1).svg" alt="" />
         <img src="./images/header-button (2).svg" alt="" />
         <img src="./images/header-button (3).svg" alt="" />
-        <img src="./images/header-button.svg" alt="" />
+        <img src="./images/User-Avatar.svg" alt="" />
       </div>
     </nav>
         <div class="test">
@@ -52,7 +52,7 @@
                    <div> <img src="./images/sub-photo.svg" alt="" />
                     <div>
                       <h1 id="channelName">Channel NAME</h1>
-                      <div style="display: flex;flex-direction: row; gap10px"><p id="noofsubs">NO OF SUBSCRIPBER</p>
+                      <div style="display: flex;flex-direction: row; gap:10px"><p id="noofsubs">NO OF SUBSCRIPBER</p>
                         <p>Subscriber</p></div>
                     </div>
                     </div>
